# Computer-Vision

./: .gitignore  Computer-vision.files  Computer-vision.includes  README.md
Alg1/: GeoTagMatch.m  convert.sh  descriptors.sh  ipaste.m  matlab_bundle.m  sift_mosaic.m
Alg1/Cproject/: CMakeLists.txt  README.md  main.c
Alg1/c++Project/: CMakeCache.txt  CMakeLists.txt  Makefile  TestClass.cpp  TestClass.h  c__Project  c__Project.cbp  main.cpp
Android/: .gitignore  LICENCE.txt
Android/MyApplication2/: build.gradle  readme.md
Android/MyApplication2/aFileChooser/: build.gradle
Android/MyApplication2/app/: app-release.apk  (+3 more)
Android/com.example.treemapp/: androidData.csv
Android/mosaic, images, list/: imageList.csv
Android/tree_pins/: beech.xml  birch.xml  black_alder.xml  fir.xml  gray_alder.xml  hazel.xml  hornbeam.xml  horse_chestnut.xml  juniper.xml  larch.xml  lind.xml  log.html  maple.xml  oak.xml  spring_birch.xml
c++Project/: .cproject  .gitignore  CMakeCache.txt  CMakeLists.txt  DSC01087_geotag.descr  DSC01104_geotag.descr  Main.cpp  Makefile  README.md  TreeMarkupToolbox.cbp  c__Project  c__Project.cbp  cmake_install.cmake  keypoints.txt  main.cpp  moc_mainwindow.cpp  qrc_resources.cpp  resources.qrc  tree.files  tree.includes  ui_mainwindow.h
c++Project/DisplayImage/: CMakeCache.txt  CMakeLists.txt  cmake_install.cmake
c++Project/include/: CMakeLists.txt  Makefile
c++Project/install/: opencv_install.sh
c++Project/lib/: .gitignore
c++Project/lib/Qt/5.8/gcc_64/lib/: libQt53DCore.la  libQt53DCore.prl  libQt53DExtras.la  libQt53DExtras.prl  libQt53DInput.la  libQt53DInput.prl  libQt53DLogic.la  libQt53DLogic.prl  libQt53DQuick.la  libQt53DQuick.prl  libQt53DQuickExtras.la  libQt53DQuickExtras.prl  libQt53DQuickInput.la  libQt53DQuickInput.prl  libQt53DQuickRender.la  libQt53DQuickRender.prl  libQt53DRender.la  libQt53DRender.prl  libQt5AccessibilitySupport.la  libQt5Bluetooth.la  libQt5Bluetooth.prl  libQt5Bootstrap.la  libQt5CLucene.la  libQt5CLucene.prl  libQt5Charts.la  libQt5Charts.prl  libQt5Concurrent.la  libQt5Core.la  libQt5DBus.la  libQt5DataVisualization.la  libQt5DataVisualization.prl  libQt5Designer.la  libQt5Designer.prl  libQt5DesignerComponents.la  libQt5DesignerComponents.prl  libQt5DeviceDiscoverySupport.la  libQt5EglFSDeviceIntegration.la  libQt5EglSupport.la  libQt5EventDispatcherSupport.la  libQt5FbSupport.la  (+91 more)
c++Project/lib/Qt/5.8/gcc_64/lib/pkgconfig/: Qt53DCore.pc  Qt53DExtras.pc  Qt53DInput.pc  Qt53DLogic.pc  Qt53DQuick.pc  Qt53DQuickExtras.pc  Qt53DQuickInput.pc  Qt53DQuickRender.pc  Qt53DRender.pc  Qt5Bluetooth.pc  Qt5Charts.pc  Qt5Concurrent.pc  Qt5Core.pc  Qt5DBus.pc  Qt5DataVisualization.pc  Qt5Designer.pc  Qt5Gamepad.pc  Qt5Gui.pc  Qt5Help.pc  Qt5Location.pc  Qt5Multimedia.pc  Qt5MultimediaWidgets.pc  Qt5Network.pc  Qt5NetworkAuth.pc  Qt5Nfc.pc  Qt5OpenGL.pc  Qt5OpenGLExtensions.pc  Qt5Positioning.pc  Qt5PrintSupport.pc  Qt5Purchasing.pc  Qt5Qml.pc  Qt5Quick.pc  Qt5QuickControls2.pc  Qt5QuickTest.pc  Qt5QuickWidgets.pc  Qt5Script.pc  Qt5ScriptTools.pc  Qt5Scxml.pc  Qt5Sensors.pc  Qt5SerialBus.pc  (+16 more)
c++Project/lib/dbat-master/code/demo/data/prague2016/cam/pmexports/: weighted-no-orient-pmreport.txt  weighted-with-orient-pmexport.txt
c++Project/lib/dbat-master/code/demo/data/prague2016/sxb/pmexports/: f-op0-no-orient-pmexport.txt  w-op1-with-orient-pmreport.txt  wsmart-no-orient-pmexport.txt
c++Project/lib/vlfeat-0.9.20/: .gitignore
c++Project/spike/DisplayImage/: DisplayImage  DisplayImage.cpp  Makefile
c++Project/spike/ReadImage/: ReadImage.cpp
c++Project/spike/c-test/: main  makefile  test.c
c++Project/spike/cmake-test/: CMakeLists.txt
c++Project/spike/exif/: .gitignore  DirectoryReader.cpp  DirectoryReader.h  Makefile  demo.cpp  demo1  demo1.cpp  exif.cpp  exif.h
c++Project/spike/neighbours/: .gitignore  DirectoryReader.cpp  Makefile  demo.cpp  neighbours  neighbours.cpp  neighbours.h
c++Project/spike/neighbours2/: .gitignore  demo.cpp  exif.cpp  exif.h  neighbours.cpp
c++Project/src/: DirectoryReader.cpp  FeaturePoints.cpp  FeaturePoints.h  HomographyData.cpp  HomographyData.h  ImageData.cpp  ImageData.h  KeyPoint.cpp  KeyPoint.h  Main.cpp  MatchPoints.cpp  MatchPoints.h  MatlabEngineWrapper.cpp  MosaicData.cpp  MosaicData.h  TreeMarkup.h  exif.cpp  exif.h  exifdemo.cpp  imaq.cpp  imaq.h  mainwindow.cpp  mainwindow.cpp.autosave  mainwindow.h  mainwindow.ui  neighbours.cpp  neighbours.h  pairs.txt
c++Project/vlfeat-0.9.20/data/: DSC01087_geotag.descr  DSC01088_geotag.descr
c++Project/vlfeat-0.9.20/vl/: generic.h  generic.h.gch
cpp-code/: .gitignore  Makefile  README.md
cpp-code/ReadImage/: CMakeCache.txt  CMakeLists.txt  Makefile
cpp-code/cmake-test/: helloworld.cpp
cpp-code/src/: Main.cpp
m-code/: FirstDemo.m  GeoTagMatch.m  GeoTagMatch.prj  README.md  SecondDemo.m  StitchingScript.m  androidData.csv  androidData.txt  block04_cameraPositions.txt  convert2matrix.m  gui.mlapp  homwarp.m  iread.m  m_4distmat.m  m_App.m  m_autosize.m  m_copyImages.m  m_distmat.m  m_geotag.m  m_img_list_for_android.m  m_img_list_for_android.m~  m_pairify.m  m_ransac.m  m_sift.m  m_stitch.m  m_wgs2xyz.m  matlab_bundle.m  mblend.m  mosaictest.m  multibandtest.m  multihomo_c.m  multihomo_f.m  rigidalign.m  romabundledemo.m  wgs2xyz.m
m-code/GUI/: GUI.mlapp
m-code/data/: roma-dbatreport.txt
m-code/lsmethod/: const.m  multihomo_c.m  multihomo_f.m  procrustes.m  resid.m  rigidalign.m  sqpsq.m
m-code/machinevision-toolbox-matlab-master/: ipaste.m  kosecka.m  sbrgb2.txt  vgg_rq.m
(+129 files in other folders)
